Tim/fix/http connector (#129)
* Create http.html

* Update embedded.go

* Update templates.go

* Update config.go

* Update configValidate.go

* Update operationInit.go

* Update operationPush.go

* Update operationPull.go

* Update README.md

* Delete client_test.go

* Update client.go

* Update configFields.go

* Update client.go

* Update client.go

* Update go.mod

* Update go.sum

* docs: auto-generate documentation

Auto-generated by generate-docs.sh workflow

---------
