# irmin-connectors/docs/swagger.json
@@ -72,12 +72,6 @@
                         "description": "Verify SSL certificates (default: true)",
                         "name": "details[verify_ssl]",
                         "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Path setting (default: /)",
-                        "name": "settings[path]",
-                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -357,12 +351,6 @@
                         "description": "Verify SSL certificates (default: true)",
                         "name": "details[verify_ssl]",
                         "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Path setting (default: /)",
-                        "name": "settings[path]",
-                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -461,12 +449,6 @@
                         "name": "operation_token",
                         "in": "formData",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Path parameter (ignored for single endpoint configurations)",
-                        "name": "path",
-                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -535,12 +517,6 @@
                         "name": "file",
                         "in": "formData",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Path parameter (ignored for single endpoint configurations)",
-                        "name": "path",
-                        "in": "formData"
                     }
                 ],
                 "responses": {
